objects/LAT_ClientActionKPI__c.object
<CustomObject>
    <fields>
        <fullName>LAT_AccountInAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Foco</label>
        <referenceTo>LAT_AccountInAction__c</referenceTo>
        <relationshipLabel>Action KPI Clients</relationshipLabel>
        <relationshipName>LAT_ActionKPIClients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ActionKPI__c</fullName>
        <label>Action KPI</label>
        <referenceTo>LAT_ActionKPI__c</referenceTo>
        <relationshipLabel>Action KPI Clients</relationshipLabel>
        <relationshipName>LAT_ActionKPIClients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>LAT_ClientName__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + LAT_AccountInAction__r.Id, LAT_AccountInAction__r.LAT_Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente Foco</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_DoneCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Realizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Done__c</fullName>
        <label>Realizado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Provided__c</fullName>
        <label>Previsto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_RealGoal__c</fullName>
        <formula>IF(AND(!ISNULL(LAT_Provided__c ),LAT_Provided__c != 0), LAT_Done__c / LAT_Provided__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meta Real (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Action KPI Client</label>
    <nameField>
        <displayFormat>CKPI-{0000}</displayFormat>
        <label>LAT_ClientActionKPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action KPI Clients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>